# eds-prise

./: .Rprofile  .env  .gitignore  TODO.md  pyproject.toml  rproject.toml
collect/: prise_extract.R  prise_query_cs.sql  prise_query_duckdb.R  prise_query_oracle.R  prise_query_oracle_cs.R
config/: clean.R  selection.R
note/man/: prise_note_man_input.R  prise_note_man_output.py  prise_note_man_output_v2.py
note/man/.streamlit/: config.toml  style_app.css  style_text.css  tuto.md
note/man/lib/: download.py  export.py  navigation.py  password.py
