[project]
name = "eds-prise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "caseutil>=0.7.2",
    "dotenv>=0.9.9",
    "filelock>=3.24.3",
    "module-inspector>=0.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pip>=26.0.1",
    "rich>=14.3.3",
    "streamlit>=1.54.0",
]
