[project]
name = "eds-prise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "caseutil>=0.7.2",
    "filelock>=3.24.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pip>=26.0.1",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "streamlit>=1.54.0",
]
